smithy-model/src/test/resources/software/amazon/smithy/model/loader/invalid/use/use-invalid-namespace.smithy
// Parse error at line 4, column 11 near `_$#Bar`: Invalid shape ID: _$#Bar
$version: "0.2.0"

use shape _$#Bar
